--- a/mobile/src/main/res/layout/app_bar_home.xml
+++ b/mobile/src/main/res/layout/app_bar_home.xml
@@ -22,14 +22,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_home"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/home"
+        android:id="@+id/homeImage"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"/>
+    <include layout="@layout/content_home"/>
 
 </android.support.design.widget.CoordinatorLayout>
