--- a/wear/src/main/res/layout/round_activity_main.xml
+++ b/wear/src/main/res/layout/round_activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context=".MainActivity" tools:deviceIds="wear_round"
     android:orientation="horizontal"
@@ -10,6 +12,7 @@
         android:layout_height="wrap_content" android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" android:text="@string/hello_round" />
     -->
+    <!--
     <RelativeLayout
         android:id="@+id/pic1"
         android:layout_width="match_parent"
@@ -34,5 +37,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
+    -->
 </RelativeLayout>
 
