--- a/mobile/src/main/res/layout/song_item.xml
+++ b/mobile/src/main/res/layout/song_item.xml
@@ -1,24 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id = "@+id/song_image"/>
+        android:layout_width="45dp"
+        android:layout_height="fill_parent"
+        android:id = "@+id/song_image"
+        android:layout_marginRight="16dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/song_image"
-        android:id = "@+id/song_title"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/song_image"
+            android:id="@+id/song_title"
+            android:text="Song Title Here"
+            android:layout_marginBottom="4dp"
+            android:textColor="@color/primary_text_default_material_light"
+            android:textSize="16sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/song_image"
-        android:layout_below="@id/song_title"
-        android:id = "@+id/song_artist"/>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/song_image"
+            android:layout_below="@id/song_title"
+            android:text="Artist Here"
+            android:id = "@+id/song_artist"
+            android:textColor="@color/secondary_text_default_material_light"
+            android:textSize="14sp"/>
 
-</RelativeLayout>
+    </LinearLayout>
+</LinearLayout>
