--- a/wear/src/main/res/layout/round_activity_main.xml
+++ b/wear/src/main/res/layout/round_activity_main.xml
@@ -1,38 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    android:id="@+id/base"
+    android:background="#303030"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context=".MainActivity" tools:deviceIds="wear_round"
     android:orientation="horizontal"
     >
-
-    <!--
-    <TextView android:id="@+id/text" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" android:text="@string/hello_round" />
-    -->
     <RelativeLayout
-        android:id="@+id/pic1"
+        android:id="@+id/root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#303030"
-        >
-        <ImageView
+        android:layout_height="match_parent">
 
-            android:src="@drawable/d_chord"
-            android:scaleType="fitCenter"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </RelativeLayout>
     <RelativeLayout
-        android:id="@+id/pic2"
+        android:id="@+id/chord_list"
         android:layout_width="match_parent"
-        android:background="#303030"
-        android:layout_height="match_parent">
-        <ImageView
-            android:scaleType="fitCenter"
-            android:src="@drawable/e_chord"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:layout_height="60dp"
+        >
+        <!--
+        <RelativeLayout
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/last_chord"
+            ></RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/current_chord"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"></RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/next_chord"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"></RelativeLayout>
+        -->
     </RelativeLayout>
 </RelativeLayout>
 
