--- a/mobile/src/main/res/layout/song_item.xml
+++ b/mobile/src/main/res/layout/song_item.xml
@@ -19,22 +19,34 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/song_image"
             android:id="@+id/song_title"
             android:text="Song Title Here"
             android:layout_marginBottom="4dp"
             android:textColor="@color/primary_text_default_material_light"
             android:textSize="16sp"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/song_image"
-            android:layout_below="@id/song_title"
-            android:text="Artist Here"
-            android:id = "@+id/song_artist"
-            android:textColor="@color/secondary_text_default_material_light"
-            android:textSize="14sp"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Artist Here"
+                android:id="@+id/song_artist"
+                android:textColor="@color/secondary_text_default_material_light"
+                android:textSize="14sp"
+                android:layout_marginRight="12dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Beginner"
+                android:id="@+id/song_difficulty"
+                android:textColor="#009688"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
